--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.2"
+    "meta": "^2.2.25",
+    "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "uniqid": "^5.4.0",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
